[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../constants"}
logger = { path = "../logger"}
filehandler = {path="../filehandler" }

colored = "2.1.0"
yaml-rust = "0.4.5"
