[package]
name = "forger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparser = { path = "../argparser"}
commander = { path = "../commander"}
constants = { path = "../constants"}
logger = { path = "../logger"}
filehandler = { path = "../filehandler"}
interpreter = { path = "../interpreter"}
variable = { path = "../variable"}
cli = { path = "../cli"}
parser = { path = "../parser"}

colored = "2.1.0"
serde_json = "1.0.114"
filetime = "0.2.23"
yaml-rust = "0.4.5"
